# geofence

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt  geofence.h  pointinpoly.cpp  pointinpoly.h
src/: CMakeLists.txt  plot_points.cpp  point_check.cpp  pointinpoly_float.cpp  pointinpoly_int.cpp
test/: CMakeLists.txt  TestGeofence.cpp  TestGeofence.h  test_points.h  test_runner.cpp
